--- a/functions/package.json
+++ b/functions/package.json
@@ -2,9 +2,8 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "build": "tsc",
-    "build:watch": "tsc --watch",
-    "serve": "npm run build && firebase emulators:start --only functions",
+    "build": "tsc -w",
+    "serve": "firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "test": "jest",
@@ -18,7 +17,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^10.2.0",
-    "firebase-functions": "^3.21.2"
+    "firebase-functions": "^3.21.2",
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
     "@types/jest": "^28.1.0",
