--- a/functions/package.json
+++ b/functions/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.0",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^0.2.0",
     "jest": "^28.1.0",
+    "supertest": "^6.2.3",
     "ts-jest": "^28.0.4",
     "typescript": "^4.7.3"
   },
