--- a/functions/package.json
+++ b/functions/package.json
@@ -2,11 +2,10 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "build": "tsc -w",
+    "build": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\"",
+    "build:once": "tsc && tsc-alias",
     "serve": "firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
-    "test": "jest",
+    "test": "tsc && tsc-alias && jest",
     "deploy": "firebase deploy --only functions",
     "deploy:rules": "cd ../../.firestore_rules && bash __build_rules.sh",
     "logs": "firebase functions:log"
@@ -25,6 +24,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "concurrently": "^7.2.2",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
@@ -32,6 +32,7 @@
     "jest": "^28.1.0",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.4",
+    "tsc-alias": "^1.6.11",
     "typescript": "^4.7.3"
   },
   "private": true
