--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "module": "commonjs",
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "outDir": "lib",
@@ -9,12 +10,12 @@
     "strict": true,
     "target": "es2017",
     "resolveJsonModule": true,
+    "paths": {
+      "~/*": ["./src/*"]
+    }
   },
   "compileOnSave": true,
   "include": [
-    "src"
-  ],
-  "exclude": [
-    "**/*.spec.ts"
+    "src/**/*"
   ]
 }
