--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+firebase-debug.log*
+firebase-debug.*.log*
+
+# Firebase cache
+.firebase/
+
 # Temporal unrelated stuff
 functions/src/session/routes/temp-login-page/_temp
 
